# project-apex

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  build_fast.sh  docker-compose.yml  docker-entrypoint.sh  launch_all.sh  launch_asc.sh  launch_dramatic.sh  launch_ferrari.sh  launch_rviz.sh  requirements.txt  run_ros2_pipeline.sh  select_car.sh  setup_env.sh  test_buffer_pool.lua  test_vbox_parser.lua
analysis/: lap_stats.json  report.html  report_mobile.html  telemetry_analysis.py
benchmarks/: benchmark_batch.lua  benchmark_decoder.lua  benchmark_simd.lua  benchmark_simd_aligned.lua  kalman_benchmark.lua  test_ffi.lua
docs/: GETTING_STARTED.md
examples/: generate_csv.lua  run_asc_stream.lua  run_dramatic_pipeline.lua  run_ferrari_pipeline.lua  run_multicar_pipeline.lua  run_pipeline.lua  run_pipeline_loop.lua  run_pipeline_streaming.lua  select_car.sh  simulate_dramatic_lap.lua  simulate_ferrari_lap.lua  simulate_ferrari_lap_fixed.lua  verify_setup.sh
f1env/: pyvenv.cfg
julia/: Manifest.toml  Project.toml  TelemetryAnalysis.jl  analyze_lap.jl
public/: index.html
ros2_ws/src/f1_telemetry_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/f1_telemetry_publisher/f1_telemetry_publisher/: can_publisher.py  tf_publisher.py  visualizer.py  visualizer_enhanced.py
src/: asc_parser.lua  can_decoder_ffi.lua  motec_ref_parser.lua  pipeline_extensions.lua  pipeline_fast.lua  pipeline_fast.zig  pipeline_ros2.lua  pipeline_simple.lua  telemetrick_parser.lua  vbox_csv_parser.lua
src/core/: build.sh  (+7 more)
tests/: test_buffer_pool.lua
(+42 files in other folders)
